# proof-of-stake

./: .gitignore  .gitpod.yml  README.md  package-lock.json  package.json  rollup.config.js
assets/: quiz.md
blockchain/: Cargo.toml
blockchain/src/: block.rs  chain.rs  lib.rs  mine.rs  node.rs
blockchain/tests/: block.rs  handle_mine.rs  handle_validate.rs  mine.rs  node.rs
client/: config-overrides.js  package-lock.json  package.json
client/public/: bubbles.json  index.html  quiz.json
client/src/: index.css  index.js  node-state.js
client/src/components/: camperbot.css  camperbot.js  ceiling.js  chain.css  chain.js  description.js  editor.js  light-bulb.css  light-bulb.js  main-view.js  monitor.css  monitor.js  screen.js  server.css  server.js
client/src/tools/: handle-tasks.js  socket.js  utils.js
client/src/tutorial/: state.js
node/: events.js  handle-client.js  handle-node.js  index.js  package-lock.json  package.json  state.js
server/: index.js
server/blockchain/: Cargo.toml
server/blockchain/src/: arg.rs  block.rs  chain.rs  lib.rs  main.rs  mine.rs  node.rs  p2p.rs  request.rs  validator.rs
server/blockchain/tests/: arg.rs  node.rs  request.rs
server/node/: events.js  handle-client.js  handle-node.js  index.js  package-lock.json  package.json  rollup.config.js  utils.js
server/node/utils/: index.js
server/utils/parser/: index.js
utils/: perf-metrics.js
utils/parser/: index.js
utils/websockets/: index.js
