[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.29"
chrono = "0.4.19"
sha2 = "0.10.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
hex = "0.4.3"
rand = "0.8.5"
getrandom = { version = "0.2.5", features = ["js"] }
