[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
sha2 = "0.10.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
libp2p = { version = "0.43.0", features = ["tcp-tokio"] }
tokio = { version = "1.17.0", features = [
  "io-util",
  "io-std",
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
hex = "0.4.3"
once_cell = "1.10.0"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8.5"
tokio-stream = { version = "0.1.8", features = ["net"] }
